# fastapi-todo-service

./: .gitignore  Dockerfile  README.md  env_example  pyproject.toml
app/: main.py
routes/: todos.py
schemas/: Todo.py
