[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["kesaralive <hello@kesaralive.com>"]
readme = "README.md"
packages = [{ include = "todo_api" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pymongo = "^4.6.3"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
